# climada_python

./: .coveragerc  .gitignore  .jenkins_ci.sh  .jenkins_ci_night.sh  .jenkins_data.sh  .jenkins_install_env.sh  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .zenodo.json  AUTHORS  AUTHORS.md  Add cassava (`cas`) support to ISIMIP crop workflow + documented standards  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  Reviewer_Checklist.md  anaconda-project.yml  check_attribute-style_access.py  climada.conf  environment.yml  environment_docs.yml  install_env_jenkins.sh  install_env_virtualenv.sh  install_req.sh  install_setup.sh  integ_tests.py  pylint_conf.rc  pyproject.toml  requirements.txt  run_tests_jenkins.sh  setup.py  test_data_api.py  test_notebooks.py  test_plot.ipynb  test_xmlrunner.py  (+3 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  code-feature-request.md
.github/matchers/: pylint-error.json  pylint-warning.json
.github/scripts/: make_release.py  prepare_release.py  setup_devbranch.py  setup_devbranch.sh
.github/workflows/: build.yml  ci.yml  docker.yml  main.yml  make-release.yml  minor-release.yml  postrelease-setup-devbranch.yml  pull-request.yml  test.yml
climada/: __init__.py  _version.py
climada/climadaBR/: __init__.py  climadaBR_def.py
climada/conf/: climada.conf  defaults.conf  logging.conf
climada/config/: defaults.conf  logging.conf
climada/engine/: __init__.py  (+11 more)
data/: desktop.ini
doc/: Makefile  README.md  conf.py  create_env_doc.dockerfile  index.rst
misc/: flood_run_script.py  runClimada.py  run_sim.py  schedule_lpjml_runs.py  schedule_runs.py  schedule_runs_ISI2b.py  schedule_sim.py  schedule_sim_lpjml.py  simulation_wrapper.py
requirements/: env_climada.yml  env_developer.yml  env_docs.yml
script/: Hands-on_0.ipynb  Hands-on_I.ipynb  Hands-on_II.ipynb  Hands-on_III.ipynb  Hands-on_IV.ipynb  demo.py
(+801 files in other folders)
